docs(handler): oauth token
OpenAPI oauth token handler docs
